# bulk-unsubscribe

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: docker.yml
alembic/: env.py
alembic/versions/: 4f4215c931a1_create_senders_and_sender_aliases.py  64496324b848_create_whitelist_rules.py  826ff8f72c6d_create_messages_jobs_actions.py  a1b2c3d4e5f6_add_archived_to_sender_status.py  f8db484c4301_create_accounts_table.py
app/: auth.py  config.py  crypto.py  database.py  db.py  main.py  models.py  security.py
app/jobs/: bulk_action.py  runner.py  scan.py
app/models/: __init__.py  account.py  action.py  job.py  message.py  sender.py  whitelist_rule.py
app/providers/: base.py  imap.py  jmap.py
app/routers/: accounts.py  scan.py  senders.py
app/routes/: accounts.py  bulk_action.py  jobs.py  senders.py  unsubscribe.py  whitelist.py
app/services/: crypto.py  fastmail_service.py  grouping.py  imap_service.py  provider_factory.py  unsubscribe.py  unsubscribe_exec.py  whitelist.py
app/templates/: _macros.html  base.html
static/: index.html
static/css/: app.css  style.css
static/js/: app.js
tests/: conftest.py  test_auth.py  test_config.py  test_db.py  test_main_warnings.py  test_origin_protection.py  test_smoke.py
tests/fakes/: mail_provider.py
tests/jobs/: test_bulk_action_job.py  test_runner.py  test_scan_job.py  test_scan_whitelist.py
tests/models/: test_account.py  test_message_job_action.py  test_sender.py  (+1 more)
(+34 files in other folders)
