[project]
name = "bulk-unsubscribe"
version = "0.2.0"
description = "Mobile-first webapp to bulk-unsubscribe from newsletters."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.4",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "aiohttp>=3.10",
    "cryptography>=43",
    "itsdangerous>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aioresponses>=0.7.6",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
